--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <h1>Stay Logged into LMI ext</h1>
+        <h1>Stay Logged into LMI is active</h1>
     </body>
 </html>
